--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DEBUG=True
-SECRET_KEY=your_secret_key
+SECRET_KEY=your-secret-key-here
 # python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_NAME=your_db_name
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
 DB_HOST=db
 DB_PORT=5432
