--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DB_USER=your_db_user
 DB_PASSWORD=your_db_password
 DB_HOST=db
 DB_PORT=5432
+
+PGADMIN_DEFAULT_PASSWORD=your_pgadmin_password
+PGADMIN_DEFAULT_EMAIL=your_email
