--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ DB_PORT=5432
 
 PGADMIN_DEFAULT_PASSWORD=your_pgadmin_password
 PGADMIN_DEFAULT_EMAIL=your_email
+
+POSTGRES_USER=your_postgres_user
+
+MAX_RETRIES=30
+SLEEP_DURATION=2
