--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     command: uvicorn core.asgi:application --host 0.0.0.0 --port 8001 --reload
     ports:
       - "8001:8001"
+    env_file:
+      - .env
     volumes:
       - .:/app
     depends_on:
