--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
 fastapi==0.116.1
+gunicorn
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
