--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,10 +7,25 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      enable_deploy:
+        description: 'Enable deployment step?'
+        required: true
+        default: 'off'
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    env:
+      DJANGO_SETTINGS_MODULE: core.settings
+      SECRET_KEY: dummy_key_for_ci
+      DEBUG: 0
+      DB_NAME: test_db
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_HOST: localhost
 
     services:
       db:
@@ -35,34 +50,18 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8
 
       - name: Run Migrations
-        env:
-          DJANGO_SETTINGS_MODULE: core.settings
-          SECRET_KEY: dummy_key_for_ci
-          DEBUG: 0
-          DB_NAME: test_db
-          DB_USER: postgres
-          DB_PASSWORD: postgres
-          DB_HOST: localhost
         run: |
           python manage.py migrate
 
       - name: Run Tests
-        env:
-          DJANGO_SETTINGS_MODULE: core.settings
-          SECRET_KEY: dummy_key_for_ci
-          DEBUG: 0
-          DB_NAME: test_db
-          DB_USER: postgres
-          DB_PASSWORD: postgres
-          DB_HOST: localhost
         run: |
           python manage.py test
 
@@ -82,7 +81,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Temporarily disabled Docker Hub login
+      # TODO: Enable Docker login when secrets are configured
       # - name: Log in to Docker Hub
       #   uses: docker/login-action@v3
       #   with:
@@ -91,19 +90,19 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t my-django-app:latest .
+          docker build -t my-django-app:latest -t my-django-app:${{ github.sha }} .
 
-      # Temporarily disabled push to Docker Hub
+      # TODO: Push image to Docker Hub after testing is complete
       # - name: Push Docker Image
       #   run: |
       #     docker push ${{ secrets.DOCKER_USERNAME }}/projectname:latest
 
   deploy:
-    if: false  # Deployment is disabled during development
+    if: ${{ github.event.inputs.enable_deploy == 'on' }}
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Deploy to Production (disabled)
+      - name: Deploy to Production
         run: |
-          echo "Deployment is skipped for now during development phase"
+          echo " Deployment triggered! Production code is going live.
