--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@jest/globals": "^30.0.5",
         "@testing-library/dom": "^10.4.1",
-        "@testing-library/jest-dom": "^6.6.4",
-        "@testing-library/react": "^16.3.0",
-        "@testing-library/user-event": "^13.5.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-router-dom": "^7.7.1",
@@ -38,6 +36,10 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.6.4",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "jest": "^27.5.1",
         "prettier": "3.6.2"
     }
 }
