--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ trio-websocket==0.12.2
 typing-inspection==0.4.1
 typing_extensions>=4.14.1
 tzdata==2022.2
-urllib3==2.5.0
+urllib3>=2.4.0,<2.6
 uvicorn==0.35.0
 websocket-client==1.8.0
 Werkzeug==3.1.3
