--- a/requirements.txt
+++ b/requirements.txt
@@ -69,7 +69,7 @@ tqdm==4.67.1
 trio==0.30.0
 trio-websocket==0.12.2
 typing-inspection==0.4.1
-typing_extensions>=4.14.1
+typing_extensions==4.13.0
 tzdata==2022.2
 urllib3>=2.4.0,<2.6
 uvicorn==0.35.0
