--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ decorator==5.2.1
 defusedxml==0.7.1
 Django==5.2.4
 django-countries==7.5.1
+django-cors-headers==4.3.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
@@ -87,3 +88,4 @@ pytest-django==4.11.1
 
 # Для типів та FastAPI
 annotated-types==0.7.0
+
