--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-<<<<<<< HEAD
 annotated-types==0.7.0
 anyio==4.9.0
-argon2-cffi==21.3.0
-=======
 # Основні бібліотеки
-aniso8601==10.0.0
->>>>>>> 07ead8c5d6d83fe56a2f42a5f6c1720b71d3dd61
+aniso8601==10.0.
+argon2-cffi==21.3.0
 asgiref==3.9.1
 attrs==25.3.0
 blinker==1.9.0
