--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-annotated-types==0.7.0
-anyio==4.9.0
 # Основні бібліотеки
-aniso8601==10.0.
+aniso8601==10.0.0
+anyio==4.9.0
 argon2-cffi==21.3.0
 asgiref==3.9.1
 attrs==25.3.0
