--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,11 @@ POSTGRES_USER=your_postgres_user
 
 MAX_RETRIES=30
 SLEEP_DURATION=2
+
+# Google OAuth
+GOOGLE_CLIENT_ID=google-client-id
+GOOGLE_CLIENT_SECRET=google-client-secret
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=github-client-id
+GITHUB_CLIENT_SECRET=github-client-secret
