--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 django-elasticsearch-dsl==8.0.0
 django-elasticsearch-dsl-drf==0.22.0
+drf-spectacular==0.28.0
+drf_yasg==1.21.10
 djoser==2.3.3
 fastapi==0.116.1
 filetype==1.2.0
