--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ Pillow==11.2.1
 pluggy==1.6.0
 proglog==0.1.12
 psycopg2-binary==2.9.10
+publicsuffix2==2.20191221
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
