--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,10 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 moviepy==2.2.1
-numpy==2.3.1
+
+# ❗ Fix for elasticsearch compatibility
+numpy==1.26.4
+
 oauthlib==3.3.1
 outcome==1.3.0.post0
 packaging==25.0
