--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ MAX_RETRIES=30
 SLEEP_DURATION=2
 
 # Elasticsearch
-ELASTICSEARCH_HOST=elasticsearch:9200
+ELASTICSEARCH_HOST=http://elasticsearch:9200
 
 # Google OAuth
 GOOGLE_CLIENT_ID=google-client-id
