Fix elasticsearch tests

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: '3.11'
           cache: 'pip'
 
       - name: Install dependencies
@@ -130,4 +130,4 @@ jobs:
     steps:
       - name: Deploy to Production
         run: |
-          echo " Deployment triggered! Production code is going live.
+          echo " Deployment triggered! Production code is going live."
