--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,12 @@ django-cors-headers==4.3.1
 django-filter==24.2
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
-django-elasticsearch-dsl==9.0.0
-django-elasticsearch-dsl-drf==0.22.5
+django-elasticsearch-dsl==7.4.0
+django-elasticsearch-dsl-drf>=0.22.4,<0.23
 drf-spectacular==0.28.0
 drf_yasg==1.21.10
 djoser==2.3.3
+elasticsearch==7.17.12
 fastapi==0.116.1
 filetype==1.2.0
 Flask==3.1.0
@@ -67,7 +68,7 @@ python3-openid==3.2.0
 pytz==2022.2.1
 requests==2.31.0
 requests-oauthlib==2.0.0
-selenium==4.33.0
+selenium==4.10.0
 setuptools>=68.0.0
 six==1.17.0
 sniffio==1.3.1
