--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ GOOGLE_CLIENT_SECRET=google-client-secret
 # GitHub OAuth
 GITHUB_CLIENT_ID=github-client-id
 GITHUB_CLIENT_SECRET=github-client-secret
+
+TEST_USER_PASSWORD=testpassword123
