--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          python manage.py test
+          python manage.py test tests investments investors projects startups users
 
       - name: Run Linting (flake8 - allow fail)
         continue-on-error: true
