--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+# Task queue and caching
+celery==5.5.3
+redis==6.4.0
+
 # Основні бібліотеки
+beautifulsoup4==4.13.3
 aniso8601==10.0.0
 anyio==4.9.0
 argon2-cffi==21.3.0
