--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ POSTGRES_USER=your_postgres_user
 MAX_RETRIES=30
 SLEEP_DURATION=2
 
+#SendGrid pass recovery
+EMAIL_HOST_PASSWORD=email-host-password
+
 # Google OAuth
 GOOGLE_CLIENT_ID=google-client-id
 GOOGLE_CLIENT_SECRET=google-client-secret
