Add resend verification email and pending_email support

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,14 @@ GOOGLE_CLIENT_SECRET=google-client-secret
 # GitHub OAuth
 GITHUB_CLIENT_ID=github-client-id
 GITHUB_CLIENT_SECRET=github-client-secret
+
+# Email and frontend configuration for development and production environments
+DEBUG=True
+FRONTEND_URL=http://localhost:3000
+
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=your-email@example.com
+EMAIL_HOST_PASSWORD=your-email-password
+EMAIL_USE_TLS=True
+DEFAULT_FROM_EMAIL=webmaster@example.com
