--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,6 +36,7 @@ jobs:
       EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
       EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
       EMAIL_PORT: 587
+      EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
 
 
     services:
