--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,12 +33,12 @@ jobs:
       GITHUB_CLIENT_ID: ${{ secrets.GIT_CLIENT_ID }}
       GITHUB_CLIENT_SECRET: ${{ secrets.GIT_CLIENT_SECRET }}
       
-      EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+      # EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
       EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
-      EMAIL_PORT: 587
-      EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
-      EMAIL_USE_TLS: ${{ secrets.EMAIL_USE_TLS }}
-      DEFAULT_FROM_EMAIL: ${{ secrets.DEFAULT_FROM_EMAIL }}
+      # EMAIL_PORT: 587
+      # EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+      # EMAIL_USE_TLS: ${{ secrets.EMAIL_USE_TLS }}
+      # DEFAULT_FROM_EMAIL: ${{ secrets.DEFAULT_FROM_EMAIL }}
 
 
     services:
