--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,7 +52,7 @@ jobs:
           --health-retries=5
 
       elasticsearch:
-        image: elasticsearch:8.13.4
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.12
         env:
           discovery.type: single-node
           xpack.security.enabled: false
