--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - .env
     depends_on:
       - db
+      - elasticsearch
     networks:
       - forum
     
@@ -25,29 +26,34 @@ services:
       - .:/app
     depends_on:
       - db
+      - elasticsearch
+    networks:
+      - forum
 
   elasticsearch:
-    image: elasticsearch:8.13.4 
+    image: elasticsearch:7.17.12
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
-      - xpack.security.enabled=false 
-      - ES_JAVA_OPTS=-Xms1g -Xmx1g
+      - xpack.security.enabled=false
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ports:
-      - "9200:9200" 
+      - "9200:9200"
       - "9300:9300"
     volumes:
-      - esdata:/usr/share/elasticsearch/data 
+      - esdata:/usr/share/elasticsearch/data
     ulimits:
       memlock:
         soft: -1
         hard: -1
     healthcheck:
-      test: ["CMD-SHELL", "curl -s http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=5s"]
+      test: ["CMD-SHELL", "curl --silent --fail http://localhost:9200/_cluster/health?wait_for_status=yellow"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 30s
+    networks:
+      - forum
 
   db:
     image: postgres:14
