--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ GITHUB_CLIENT_ID=github-client-id
 GITHUB_CLIENT_SECRET=github-client-secret
 
 TEST_USER_PASSWORD=testpassword123
+
+# Redis for chat
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
