--- a/.env.example
+++ b/.env.example
@@ -29,4 +29,13 @@ GOOGLE_CLIENT_SECRET=google-client-secret
 GITHUB_CLIENT_ID=github-client-id
 GITHUB_CLIENT_SECRET=github-client-secret
 
+DEBUG=False
+EMAIL_HOST_PASSWORD=config('EMAIL_HOST_PASSWORD') #in .env file 
+EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST = 'smtp.sendgrid.net'
+EMAIL_PORT = 587
+EMAIL_HOST_USER = 'apikey'
+EMAIL_USE_TLS = True
+DEFAULT_FROM_EMAIL = 'pbeinner@gmail.com'
+
 TEST_USER_PASSWORD=testpassword123
