--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,8 @@ EMAIL_USE_TLS=True
 DEFAULT_FROM_EMAIL=pbeinner@gmail.com
 
 TEST_USER_PASSWORD=testpassword123
+
+MAX_MESSAGE_LENGTH=1000
+MIN_MESSAGE_LENGTH=1
+MESSAGE_RATE_LIMIT=5
+RATE_LIMIT_WINDOW=10
