integrated swagger and redoc

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,6 @@ MAX_MESSAGE_LENGTH=1000
 MIN_MESSAGE_LENGTH=1
 MESSAGE_RATE_LIMIT=5
 RATE_LIMIT_WINDOW=10
+
+# API docs toggle (Swagger/ReDoc)
+DOCS_ENABLED=true
