--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ tzdata==2025.2
 websocket-client==1.8.0
 Werkzeug==3.1.3
 wsproto==1.2.0
+concurrent-log-handler==0.9.19  # added for Django logging support
 
 # Django stack
 Django==5.2.4
