--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,7 @@ MAX_MESSAGE_LENGTH=1000
 MIN_MESSAGE_LENGTH=1
 MESSAGE_RATE_LIMIT=5
 RATE_LIMIT_WINDOW=10
+
+MONGO_DB=chat
+MONGO_HOST=localhost
+MONGO_PORT=27017
