--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,5 @@ RATE_LIMIT_WINDOW=10
 MONGO_DB=chat
 MONGO_HOST=localhost
 MONGO_PORT=27017
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=example
