--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     depends_on:
       - db
       - elasticsearch
+      - mongodb
     networks:
       - forum
     
@@ -96,10 +97,25 @@ services:
     networks:
       - forum
 
+  mongo:
+    image: mongo:6
+    container_name: mongodb
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - forum
+
 volumes:
   postgres_data:
   pgadmin_data:
   esdata:
     driver: local
+  mongo_data:
 networks:
   forum:
