--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,7 @@ MAX_MESSAGE_LENGTH=1000
 MIN_MESSAGE_LENGTH=1
 MESSAGE_RATE_LIMIT=5
 RATE_LIMIT_WINDOW=10
+MAX_PARTICIPANTS=50
 
 MONGO_DB=chat
 MONGO_HOST=localhost
