--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,20 +15,20 @@ services:
     networks:
       - forum
     
-  # fastapi:
-  #   build: .
-  #   command: uvicorn core.asgi:application --host 0.0.0.0 --port 8001 --reload
-  #   ports:
-  #     - "8001:8001"
-  #   env_file:
-  #     - .env
-  #   volumes:
-  #     - .:/app
-  #   depends_on:
-  #     - db
-  #     - elasticsearch
-  #   networks:
-  #     - forum
+  fastapi:
+    build: .
+    command: uvicorn core.asgi:application --host 0.0.0.0 --port 8001 --reload
+    ports:
+      - "8001:8001"
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+      - elasticsearch
+    networks:
+      - forum
 
   elasticsearch:
     image: elasticsearch:7.17.12
