--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.11.0",
         "clsx": "^2.1.1",
-        "axios": "^1.11.0",
+        "jwt-decode": "^4.0.0",
         "prop-types": "^15.8.1",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
