--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - elasticsearch
     networks:
       - forum
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/healthcheck/"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     
   fastapi:
     build: .
@@ -100,8 +105,10 @@ services:
     build: .
     container_name: test-runner
     depends_on:
-      - db
-      - elasticsearch
+      db:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
     volumes:
       - .:/app
     command: test
