--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,7 @@ services:
     env_file:
       - .env
     environment:
+      - DJANGO_SETTINGS_MODULE=core.test_settings
       - DB_HOST=db 
       - ELASTICSEARCH_HOST=http://elasticsearch:9200
     depends_on:
