Fix bugs, add tests

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,6 @@ MONGO_PORT=27017
 
 # API docs toggle (Swagger/ReDoc)
 DOCS_ENABLED=true
+
+AES256_KEY=your-aes256-key
+# python -c "import os, base64; print(base64.urlsafe_b64encode(os.urandom(32)).decode())"
