--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,8 +30,8 @@ jobs:
       GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
       GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 
-      GITHUB_CLIENT_ID: ${{ secrets.GIT_CLIENT_ID }}
-      GITHUB_CLIENT_SECRET: ${{ secrets.GIT_CLIENT_SECRET }}
+      REACT_APP_GITHUB_CLIENT_ID: ${{ secrets.GIT_CLIENT_ID }}
+      REACT_APP_GITHUB_CLIENT_SECRET: ${{ secrets.GIT_CLIENT_SECRET }}
       
       EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
       EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
