--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,5 @@ DOCS_ENABLED=true
 
 AES256_KEY=your-aes256-key
 # python -c "import os, base64; print(base64.urlsafe_b64encode(os.urandom(32)).decode())"
+
+SENTRY_DSN=https://fd3449de3484081ad0734df494cfe3d6@o4509943696850944.ingest.de.sentry.io/4509943726800976
