--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,4 @@ ACCESS_TOKEN_LIFETIME=30
 REFRESH_TOKEN_LIFETIME=1
 
 FRONTEND_URL=http://localhost:3000
+ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0
