--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -21,5 +21,10 @@ stringData:
   GITHUB_CLIENT_ID: "dummy-github-client-id"
   GITHUB_CLIENT_SECRET: "dummy-github-client-secret"
 
+  # Elasticsearch
+  ELASTIC_USERNAME: "elastic"
+  ELASTIC_PASSWORD: "Qx7$kV9p!rT3zLm#4sY2h8B"
+
+
 
 
