--- a/k8s/postgres-service.yaml
+++ b/k8s/postgres-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres
+  name: postgres-service
   namespace: forum
 spec:
   type: ClusterIP
@@ -11,3 +11,4 @@ spec:
     - name: postgres
       port: 5432
       targetPort: 5432
+
