--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: django-app
-          image: ghcr.io/your-org/forum-project:v1.2.3
+          image: ghcr.io/raidriar28/forum-project:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
@@ -24,7 +24,6 @@ spec:
                 name: django-config
             - secretRef:
                 name: django-secrets
-
           readinessProbe:
             httpGet:
               path: /health/elasticsearch/
@@ -33,7 +32,6 @@ spec:
             periodSeconds: 10
             timeoutSeconds: 3
             failureThreshold: 6
-
           livenessProbe:
             httpGet:
               path: /health/elasticsearch/
@@ -42,14 +40,12 @@ spec:
             periodSeconds: 30
             timeoutSeconds: 5
             failureThreshold: 3
-
           startupProbe:
             httpGet:
               path: /health/elasticsearch/
               port: 8000
             failureThreshold: 30
             periodSeconds: 10
-
           resources:
             requests:
               cpu: "200m"
@@ -57,16 +53,13 @@ spec:
             limits:
               cpu: "500m"
               memory: "512Mi"
-
           volumeMounts:
             - name: media-storage
               mountPath: /app/media
             - name: static-storage
               mountPath: /app/staticfiles
-
       imagePullSecrets:
         - name: ghcr-credentials
-
       volumes:
         - name: media-storage
           persistentVolumeClaim:
