--- a/k8s/django-deployment.yaml
+++ b/k8s/django-deployment.yaml
@@ -1,67 +1,82 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: django-app
+  name: django-app-dev
   namespace: forum
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: django-app
+      app: django-app-dev
   template:
     metadata:
       labels:
-        app: django-app
+        app: django-app-dev
     spec:
       containers:
-      - name: django-app
+      - name: django-app-dev
         image: ghcr.io/raidriar28/forum-project:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8000
-        env:
-          - name: DB_HOST
-            valueFrom:
-              configMapKeyRef:
-                name: django-config
-                key: DB_HOST
-          - name: DB_PORT
-            valueFrom:
-              configMapKeyRef:
-                name: django-config
-                key: DB_PORT
-          - name: MAX_RETRIES
-            valueFrom:
-              configMapKeyRef:
-                name: django-config
-                key: MAX_RETRIES
-          - name: SLEEP_DURATION
-            valueFrom:
-              configMapKeyRef:
-                name: django-config
-                key: SLEEP_DURATION
-          - name: DB_NAME
-            valueFrom:
-              configMapKeyRef:
-                name: django-config
-                key: DB_NAME
-          - name: DB_USER
-            valueFrom:
-              configMapKeyRef:
-                name: django-config
-                key: DB_USER
-          - name: REDIS_HOST
-            valueFrom:
-              configMapKeyRef:
-                name: django-config
-                key: REDIS_HOST
-          - name: REDIS_PORT
-            valueFrom:
-              configMapKeyRef:
-                name: django-config
-                key: REDIS_PORT
+
+        envFrom:
+        - configMapRef:
+            name: django-config
+        - secretRef:
+            name: django-secrets
+
+        readinessProbe:
+          httpGet:
+            path: /health/elasticsearch/
+            port: 8000
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 3
+          failureThreshold: 6
+
+        livenessProbe:
+          httpGet:
+            path: /health/elasticsearch/
+            port: 8000
+          initialDelaySeconds: 20
+          periodSeconds: 30
+          timeoutSeconds: 5
+          failureThreshold: 3
+
+        startupProbe:
+          httpGet:
+            path: /health/elasticsearch/
+            port: 8000
+          failureThreshold: 30
+          periodSeconds: 10
+
+        resources:
+          requests:
+            cpu: "200m"
+            memory: "256Mi"
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+
+        volumeMounts:
+        - name: media-storage
+          mountPath: /app/media
+        - name: static-storage
+          mountPath: /app/staticfiles
+
       imagePullSecrets:
-        - name: ghcr-credentials
+      - name: ghcr-credentials
+
+      volumes:
+      - name: media-storage
+        persistentVolumeClaim:
+          claimName: media-storage
+      - name: static-storage
+        persistentVolumeClaim:
+          claimName: static-storage
+
+
 
 
 
