--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -12,6 +12,7 @@ stringData:
   DB_PASSWORD: "postgres"
 
   # Email
+  EMAIL_HOST: "localhost"
   EMAIL_HOST_USER: "admin@example.com"
   EMAIL_HOST_PASSWORD: "dummy-password"
 
@@ -24,6 +25,7 @@ stringData:
   # Elasticsearch
   ELASTIC_USERNAME: "elastic"
   ELASTIC_PASSWORD: "Qx7$kV9p!rT3zLm#4sY2h8B"
+
 
 
 
