Fix bugs in chat

--- a/.env.example
+++ b/.env.example
@@ -50,9 +50,11 @@ MIN_MESSAGE_LENGTH=1
 MESSAGE_RATE_LIMIT=5
 RATE_LIMIT_WINDOW=10
 
-MONGO_DB=chat
+MONGO_DB=chat_test
 MONGO_HOST=127.0.0.1
 MONGO_PORT=27017
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=secret
 
 # API docs toggle (Swagger/ReDoc)
 DOCS_ENABLED=true
