--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,9 +43,11 @@ jobs:
       REDIS_HOST: localhost
       REDIS_PORT: 6379
 
-      MONGO_DB: test_chat
+      MONGO_DB: chat_test
       MONGO_HOST: localhost
       MONGO_PORT: 27017
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: secret
 
     services:
       db:
